# EFFIGY

./: .gitignore  CMakeLists.txt  README.md  USER_GUIDE.md
.github/workflows/: build.yml
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.cpp  Presets.h
Source/dsp/: CabSection.cpp  CabSection.h  Drive.cpp  Drive.h  FactoryIRs.cpp  FactoryIRs.h  FeelEngine.cpp  FeelEngine.h  GateTightener.cpp  GateTightener.h  InputConditioning.cpp  InputConditioning.h  Produce.cpp  Produce.h  ToneStack.cpp  ToneStack.h
Source/gui/: LookAndFeel.cpp  LookAndFeel.h
packaging/: build_pkg.sh
